--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <h1>iotytty</h1> 
+   <h1 class="name">В Киеве упал меторит!</h1>
+   
+
 </body>
 </html>
