--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<link rel="stylesheet" href="./style.css">
-</head>
-<body>
-   <h1 class="name">В Киеве упал меторит!</h1>
-
-
-
-
-   
-</body>
-</html>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <h1 class="name">В Киеве упал меторит!</h1>
+    <p>
+      ;wjtrg;wejkrg;wkejrf[weko[fwpeork]v24po3kr peikrf]o3ek pokfo k2okfk2[o3krf
+      2orkfokr]fok23] ][o2rkf2kfo2k 2]ok3rfq[o3ekr 2][o4kro4o4rk23oik4r
+      q[3okro3ekrf[ qi[p3jrij34irj[1peij3r [p23jk4r[oqi3jr[oi3ejr
+      [[q3jk4r[i123ejr[io3ej4 o23jkr[ ;'12jkr[io43jr[12 j[1io43jr[p i43
+      j[p123ijer[o2 [po2iej43r[23j pio34jr[p1ij43r[p i1oj43r[p [p3ijr[1po23jeri[
+      [qi3jer[p [i1o2 j[oi143 oi[p43 ri[1pok3j4r[pi [134jr[i3jr [01pj43 [13 [143
+      r[1o3jk [q'pjk [1ok3r [[143kor[0o13kr[1k [143ojker[1j4r3i[1o
+      j[io234jr[po1j3er
+    <span>oetrijge;wjtrg;wejkrg;wkejrf[weko[fwpeork]v24po3kr peikrf]o3ek pokfo k2okfk2[o3krf
+        2orkfokr]fok23] ][o2rkf2kfo2k 2]ok3rfq[o3ekr 2][o4kro4o4rk23oik4r
+        q[3okro3ekrf[ qi[p3jrij34irj[1peij3r [p23jk4r[oqi3jr[oi3ejr
+        [[q3jk4r[i123ejr[io3ej4 o23jkr[ ;'12jkr[io43jr[12 j[1io43jr[p i43
+        j[p123ijer[o2 [po2iej43r[23j pio34jr[p1ij43r[p i1oj43r[p [p3ijr[1po23jeri[
+        [qi3jer[p [i1o2 j[oi143 oi[p43 ri[1pok3j4r[pi [134jr[i3jr [01pj43 [13 [143
+        r[1o3jk [q'pjk [1ok3r [[143kor[0o13kr[1k [143ojker[1j4r3i[1o
+        j[io234jr[po1j3er</span></p>
+        <ul>
+            <li><a href="/">text</a></li>
+            <li><a href="/">text</a></li>
+            <li><a href="/">text</a></li>
+            <li><a href="/">text</a></li>
+        </ul>
+        </html>
